--- a/math/post_approx_with_GP_emulators.tex
+++ b/math/post_approx_with_GP_emulators.tex
@@ -16,6 +16,9 @@
 \usepackage{fancyvrb} % For writing using verbatim font inline. 
 % \usepackage[demo]{graphicx}
 
+% Bibliography
+\bibliographystyle{plainnat}
+
 % Plotting
 \usepackage{pgfplots}
 \usepackage{xinttools} % for the \xintFor***
@@ -53,9 +56,6 @@
 \begin{document}
 
 \maketitle
-
-% Use citep and citet
-% Write w_1 and w_2 as functions of u and u-tilde 
 
 % Introduction 
 \section{Introduction}
@@ -429,10 +429,55 @@ surrogates are discussed in \Cref{post_approx_fwd}.
 
 % Random Densities and the Sample-Based Approximation
 \subsection{Random Densities and the Sample-Based Approximation}
-We begin by recalling that the log-likelihood GP emulator results in the Gaussian predictor 
+We begin by recalling that the GP emulator $\llikEm$ results in the Gaussian predictor 
  $\llikEm[\Ndesign](\parMat) \sim \Gaussian(\emMean[\Ndesign]{\llik}(\parMat), \emKer[\Ndesign]{\llik}(\parMat))$
- at any parameter set $\parMat$.
- 
+ at any parameter set $\parMat$. Plugging this surrogate into the posterior density expression \ref{post_dens} yields
+\begin{align}
+\llikEmRdm[\Ndesign]{\postDensNorm}(\Par) 
+&\Def \frac{1}{\llikEmRdm[\Ndesign]{\normCst}} \llikEmRdmDens[\Ndesign](\Par) 
+\Def \frac{1}{\llikEmRdm[\Ndesign]{\normCst}} \priorDens(\Par) \Exp{\llikEm[\Ndesign](\Par)} \label{post_dens_random_llik},
+\end{align}
+with normalizing constant given by 
+\begin{align}
+\llikEmRdm[\Ndesign]{\normCst}
+&= \int \priorDens(\Par) \Exp{\llikEm[\Ndesign](\Par)} d\Par \label{norm_cst_random_llik}. 
+\end{align}
+The density $\llikEmRdm[\Ndesign]{\postDensNorm}$ is random; each sample trajectory from the 
+underlying GP induces a different posterior. It is worth noting that $\llikEmRdmDens[\Ndesign](\Par)$,
+the unnormalized random density evaluated at an input $\Par$, inherits its randomness only from the scalar random 
+variable $\llikEm(\Par)$. However, its normalized counterpart $\llikEmRdm[\Ndesign]{\postDensNorm}(\Par)$ depends 
+on the entire (infinite-dimensional) GP distribution through the normalizing constant $\llikEmRdm[\Ndesign]{\normCst}$.
+Given that \ref{post_dens_random_llik} fully incorporates the GP predictive distribution, we consider 
+$\llikEmRdm[\Ndesign]{\postDensNorm}$ to be the baseline posterior approximation to which other methods will
+be compared. Following \citet{StuartTeck1}, we refer to $\llikEmRdm[\Ndesign]{\postDensNorm}$ as the 
+\textit{sample-based} approximation. This approximation can be understood from a Monte Carlo perspective, 
+as summarized in \Cref{alg:sample-approx} [\todo: subscript notation indexing samples in algorithm might 
+be a bit confusing given subscript on prior density; maybe change this or just define the algorithm as returning 
+a single sample]. 
+
+\begin{algorithm}
+    \caption{Monte Carlo Representation of the Sample-Based Approximation}
+    \label{alg:sample-approx}
+    \begin{algorithmic}[1] % The number tells where the line numbering should start
+    \Function{sampleApprox}{$\llikEm, \NSample$}     
+        \For{$\sampleIndex \gets1,\NSample$} 
+        		\State $\indexSample{\ell} \sim \law(\llikEm)$ \Comment{Sample GP trajectory}
+		\State $\indexSample{\postDens}(\Par) \gets \priorDens(\Par)\Exp{\ell(\Par)}$ \Comment{Induced unnormalized density}
+		\State $\indexSample{\Par} \sim \postDensNorm$ \Comment{Draw from sampled density}
+	\EndFor
+	\State \Return $(\indexSample[1]{\Par}, \dots, \indexSample[\NSample]{\Par})$
+	\EndFunction
+    \end{algorithmic}
+\end{algorithm}
+
+Alternatively, we can think of the density of the $\Par$-samples generated via this procedure, which 
+can be seen to be
+\begin{align}
+\llikEmSampDensNorm[\Ndesign](\Par)
+&\Def \E_{\llikEm}\left[\frac{\priorDens(\Par) \Exp{\llikEm[\Ndesign](\Par)}}{\int \priorDens(\Par^\prime) \Exp{\llikEm[\Ndesign](\Par^\prime)} d\Par^\prime} \right]
+\label{samp_dens_norm}
+\end{align}
+
  % The Forward Model Emulation Setting
 \subsection{The Forward Model Emulation Setting} \label{post_approx_fwd}
  In this section, we discuss notable differences in the above posterior approximation methods when working 
@@ -1888,7 +1933,7 @@ In these settings the comparison between the approximate posteriors becomes even
 
 
 \bibliography{post_approx_with_GP_emulators} 
-\bibliographystyle{ieeetr}
+% \bibliographystyle{ieeetr}
 
 \end{document}
 
